Adding more leaderboard stats
